...
    private func showError(_ error: NSError) {
        showAlert(error.domain)
    }
    
    private func showAlert(_ message: String) {
        let alertVC = UIAlertController(title: message, message: nil, preferredStyle: UIAlertControllerStyle.alert)
        alertVC.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        present(alertVC, animated: true, completion: nil)
    }
    
    // MARK: - Actions
    // MARK: Twitter
    @IBAction func twitterButtonPressed(sender: UIButton) {
...
